--- a/aboutus.html
+++ b/aboutus.html
@@ -29,8 +29,7 @@
                   <li><a href="html.html">HTML</a></li>
                   <li><a href="css.html">CSS</a></li>
                   <li><a href="javascript.html">JavaScript</a></li>
-                  <li><a href="ds.html">Data Structures and Algorithms</a></li>
-                  
+                  <li><a href="ds.html">Data Structures and Algorithms</a></li> 
                   <li><a href="sql.html">SQL</a></li>
                   <li><a href="selenium.html">Selenium</a></li>
                   <li><a href="aws.html">AWS</a></li>
@@ -38,6 +37,10 @@
                   <li><a href="aptitude.html">Quantitative Aptitude</a></li>
                   <li><a href="reasoning.html">Logical Reasoning</a></li>
                   <li><a href="dca.html">DCA</a></li>
+                  <li><a href="exams.html">Exams</a></li>
+                  <li><a href="aboutus.html">About</a></li>
+                  <li><a href="gallery.html">Gallery</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="nav-links" id="navLinks">
@@ -76,7 +79,7 @@
                     <li><a href="aboutus.html">About</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="tel:+1234567890" class="call-now-btn">Call Now</a></li>
+                    <li><a href="tel:9030941099" class="call-now-btn">Call Now</a></li>
                 </b></ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showNavMenu()"></i>
