--- a/certificate.html
+++ b/certificate.html
@@ -214,7 +214,7 @@
       }
   
       // Construct the URL for the certificate
-      const certificateURL = `certificates/${certificateId}.pdf`;
+      const certificateURL = `${certificateId}.pdf`;
   
       try {
         // Check if the certificate file exists
