--- a/exams.html
+++ b/exams.html
@@ -178,8 +178,8 @@
                             <a href="Eapcet_Questions_html/physics/MechanicalPropertiesofFluids.html" class="btn btn-success mb-2">Mechanical Properties of Fluids</a>
                             <a href="Eapcet_Questions_html/physics/ThermalPropertiesofMatter.html" class="btn btn-success mb-2">Thermal Properties of Matter</a>
                             <a href="Eapcet_Questions_html/physics/Thermodynamics.html" class="btn btn-success mb-2">Thermodynamics</a>
-                            <a href="Eapcet_Questions_html/physics/alternating_current.html" class="btn btn-success mb-2">Alternating Current</a>
-                            <a href="Eapcet_Questions_html/physics/alternating_current.html" class="btn btn-success mb-2">Alternating Current</a>
+                            <a href="Eapcet_Questions_html/physics/KineticTheoryofGases.html" class="btn btn-success mb-2">Kinetic Theory of Gases</a>
+                            <a href="Eapcet_Questions_html/physics/Oscillations.html" class="btn btn-success mb-2">Oscillations</a>
                             <a href="Eapcet_Questions_html/physics/alternating_current.html" class="btn btn-success mb-2">Alternating Current</a>
                             <a href="Eapcet_Questions_html/physics/alternating_current.html" class="btn btn-success mb-2">Alternating Current</a>
                             <a href="Eapcet_Questions_html/physics/alternating_current.html" class="btn btn-success mb-2">Alternating Current</a>
@@ -218,7 +218,7 @@
                         </div>
                         <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('eapcet_test')">Eapcet Mock Test</button>
                         <div id="eapcet_test" class="nested-subcategories d-none">
-                            <a href="eapcet mock test/Mock_Test_1.html" class="btn btn-success mb-2">Mock Test 1</a>
+                            <a href="eapcet mock test/Mock_Test_1.html" class="btn btn-success mb-2">Full Test 1</a>
                             <a href="eapcet mock test/Full_Test_2.html" class="btn btn-success mb-2">Full Test 2</a>
                             <a href="eapcet mock test/Full_Test_3.html" class="btn btn-success mb-2">Full Test 3</a>
                            
