--- a/exams.html
+++ b/exams.html
@@ -180,10 +180,22 @@
                             <a href="Eapcet_Questions_html/physics/Thermodynamics.html" class="btn btn-success mb-2">Thermodynamics</a>
                             <a href="Eapcet_Questions_html/physics/KineticTheoryofGases.html" class="btn btn-success mb-2">Kinetic Theory of Gases</a>
                             <a href="Eapcet_Questions_html/physics/Oscillations.html" class="btn btn-success mb-2">Oscillations</a>
+                            <a href="Eapcet_Questions_html/physics/Waves.html" class="btn btn-success mb-2">Waves</a>
+                            <a href="Eapcet_Questions_html/physics/ElectricChargesandFields.html" class="btn btn-success mb-2">Electric Charges and Fields</a>
+                            <a href="Eapcet_Questions_html/physics/ElectrostaticPotential.html" class="btn btn-success mb-2">Electrostatic Potential and Capacitance</a>
+                            <a href="Eapcet_Questions_html/physics/CurrentElectricity.html" class="btn btn-success mb-2">Current Electricity</a>
+                            <a href="Eapcet_Questions_html/physics/MagneticEffects.html" class="btn btn-success mb-2">Magnetic Effects of Current</a>
+                            <a href="Eapcet_Questions_html/physics/MagnetismandMatter.html" class="btn btn-success mb-2">Magnetism and Matter</a>
+                            <a href="Eapcet_Questions_html/physics/ElectromagneticInduction.html" class="btn btn-success mb-2">Electromagnetic Induction</a>
                             <a href="Eapcet_Questions_html/physics/alternating_current.html" class="btn btn-success mb-2">Alternating Current</a>
-                            <a href="Eapcet_Questions_html/physics/alternating_current.html" class="btn btn-success mb-2">Alternating Current</a>
-                            <a href="Eapcet_Questions_html/physics/alternating_current.html" class="btn btn-success mb-2">Alternating Current</a>
-                            <a href="Eapcet_Questions_html/physics/alternating_current.html" class="btn btn-success mb-2">Alternating Current</a>
+                            <a href="Eapcet_Questions_html/physics/ElectromagneticWaves.html" class="btn btn-success mb-2">Electromagnetic Waves</a>
+                            <a href="Eapcet_Questions_html/physics/RayOptics.html" class="btn btn-success mb-2">Ray Optics and Optical Instruments</a>
+                            <a href="Eapcet_Questions_html/physics/WaveOptics.html" class="btn btn-success mb-2">Wave Optics</a>
+                            <a href="Eapcet_Questions_html/physics/RadiationandMatter.html" class="btn btn-success mb-2">Dual Nature of Radiation and Matter</a>
+                            <a href="Eapcet_Questions_html/physics/Atoms.html" class="btn btn-success mb-2">Atoms</a>
+                            <a href="Eapcet_Questions_html/physics/Nuclei.html" class="btn btn-success mb-2">Nuclei</a>
+                            <a href="Eapcet_Questions_html/physics/SemiconductorElectronics.html" class="btn btn-success mb-2">Semiconductor Electronics Materials, Devices and Simple Circuits </a>
+                            <a href="Eapcet_Questions_html/physics/CommunicationSystems.html" class="btn btn-success mb-2">Communication Systems </a>
                            
                         </div>
                         <button class="btn btn-secondary w-100 mb-2" onclick="toggleNested('chemistry_chapters')">Chemistry Chapters-Wise Questions </button>
