--- a/Eapcet_Questions_html/physics/CommunicationSystems.html
+++ b/Eapcet_Questions_html/physics/CommunicationSystems.html
@@ -122,7 +122,7 @@
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "Eapcet";
     const examTimer = 20;
-    const examfolder = "question_images/CommunicationSystems";
+    const examfolder = "question_images/Communication Systems";
     const numberofquestions = 14;
     const positivemark = 1;
     const negativemark = 0;
