--- a/Jee-Mains mock test/Mock_Test_1.html
+++ b/Jee-Mains mock test/Mock_Test_1.html
@@ -122,7 +122,7 @@
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "JEE-MAINS";
     const examTimer = 180;
-    const examfolder = "fulltest1";
+    const examfolder = "Set-1";
     const numberofquestions = 75;
     const positivemark = 4;
     const negativemark = -1;
