--- a/Eapcet_Questions_html/Eapcet Full Test/Full_Test_3.html
+++ b/Eapcet_Questions_html/Eapcet Full Test/Full_Test_3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mock Test</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../../styles.css">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 <body>
   <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
     <nav>
-        <img src="logo.png" alt="" class="logo">    
+        <img src="../../logo.png" alt="" class="logo">    
     </nav>   
   </section>
   <br><br><br><br><br><br>
@@ -122,7 +122,7 @@
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "Eapcet";
     const examTimer = 180;
-    const examfolder = "Full Test 3";
+    const examfolder = "Eapcet_Questions_html/Eapcet Full Test/Full Test 3";
     const numberofquestions = 160;
     const positivemark = 1;
     const negativemark = 0;
@@ -197,7 +197,7 @@
       // Prompt to confirm before starting the exam
       if (confirm("Are you sure to start the mock test!")) {
         // Redirect to exam page
-        window.location.href = "exam.html";
+        window.location.href = "../../exam.html";
       }
     } catch (error) {
       alert("There was an error saving your data.");
