--- a/Eapcetexam.html
+++ b/Eapcetexam.html
@@ -125,9 +125,20 @@
 .custom-btn {
     border: none;
     font-size: 14px;
-    padding: 6px 12px;
+    padding: 6px 10px;
     border-radius: 5px;
     transition: 0.3s ease-in-out;
+}
+@media (max-width: 576px) {
+    .custom-btn {
+        font-size: 12px;  /* Slightly smaller font */
+        padding: 4px 8px;  /* Reduce padding */
+        margin: 2px;  /* Reduce space between buttons */
+    }
+
+    .card-footer .d-flex {
+        gap: 5px; /* Reduce gap between buttons */
+    }
 }
 
 /* Learn More Button - Blue */
