--- a/Eapcet_Questions_html/chemistry/question_images/AlcoholsP.html
+++ b/Eapcet_Questions_html/chemistry/question_images/AlcoholsP.html
@@ -194,10 +194,10 @@
     </div>
 
     <script>
-        const imageFolderPath = "Chemical Kinetics";  // Folder for images
-const totalQuestions = 19;  // Total number of questions
+        const imageFolderPath = "Alcohols,Phenols and Ethers";  // Folder for images
+const totalQuestions = 21;  // Total number of questions
 const imageExtension = ".png";  // Image extension
-const starQuestions = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,];  // Questions with a single star
+const starQuestions = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22];  // Questions with a single star
 const doubleStarQuestions = [3, 5, 7];  // Questions with a double star
 
 let currentQuestion = 1;  // Start with the first question
