--- a/Eapcetexam.html
+++ b/Eapcetexam.html
@@ -701,7 +701,7 @@
                         <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
                         <div class="d-flex justify-content-center gap-5">
                             <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>
-                            <button class="custom-btn practice" onclick="window.location.href='ChemicalKineticsP.html'">Practice</button>
+                            <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/ChemicalKineticsP.html'">Practice</button>
                             <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/chemistry/Easy/ChemicalKineticseasy.html'">Test</button>
                         </div>
                         
