--- a/Eapcet_Questions_html/chemistry/question_images/ChemicalKineticsP.html
+++ b/Eapcet_Questions_html/chemistry/question_images/ChemicalKineticsP.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Questions</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mock Test</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">     
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <style>
+       .header {
+    background-color: rgb(23, 41, 84);
+    background-position: center;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000; /* Ensure the navbar appears above other content while scrolling down */
+    display: flex;
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
+    padding: 10px 0;
+}
+
+.logo {
+    width: 100px; /* Adjust width as needed */
+    height: 100px; /* Maintains aspect ratio */
+    border-radius: 50%;
+}
+
+/* Responsive Design for Small Screens */
+@media (max-width: 768px) {
+    .header {
+        justify-content: center; /* Ensure the logo stays centered on small devices */
+    }
+}
+
         .question-card-container {
             display: flex;
             justify-content: center;
@@ -118,7 +152,12 @@
             font-size: 16px;
             border-radius: 5px;
         }
-
+        /* Footer Styles */
+#footer {
+    background-color: rgb(23, 41, 84); /* White background */
+    color: #ffffff; /* Dark blue text color */
+    padding: 10px 0;
+}
         /* Responsive Layout */
         @media (max-width: 768px) {
             .question-card {
@@ -164,8 +203,14 @@
     </style>
 </head>
 <body>
+    <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
+        <nav>
+            <img src="../../../logo.png" alt="" class="logo">    
+        </nav>   
+      </section>
+      <br><br><br><br><br>
     <div class="container mt-4">
-        <h2 class="text-center">Chemistry Questions</h2>
+        <h2 class="text-center">Chemical Kinetics</h2>
         
         <!-- Centering the Question Card -->
         <div id="question-container" class="row justify-content-center">
@@ -185,14 +230,19 @@
 
         <!-- Star Questions List -->
         <div class="mt-4">
-            <h4>Questions with Easy:</h4>
+            <h4>Level Easy:</h4>
             <div class="star-question-list" id="double-star-list"></div>
-            <h4>Questions with Medium:</h4>
+            <h4>Level Medium:</h4>
             <div class="star-question-list" id="single-star-list"></div>
         </div>
         <br><br><br><br>
     </div>
-
+    <footer id="footer" class="footer">
+        
+        <div class="container text-center">
+            <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
+        </div> 
+    </footer>
     <script>
         const imageFolderPath = "Chemical Kinetics";  // Folder for images
 const totalQuestions = 19;  // Total number of questions
@@ -209,25 +259,25 @@ const singleStarList = document.getElementById("single-star-list");
 const doubleStarList = document.getElementById("double-star-list");
 
 const answers = {
-    1: "Answer is D for Question 1",
-    2: "Answer is A for Question 2",
-    3: "Answer is A for Question 3",
-    4: "Answer is C for Question 4",
-    5: "Answer is C for Question 5",
-    6: "Answer is D for Question 6",
-    7: "Answer is A for Question 7",
-    8: "Answer is C for Question 8",
-    9: "Answer is D for Question 9",
-    10: "Answer is C for Question 10",
-    11: "Answer is D for Question 11",
-    12: "Answer is A for Question 12",
-    13: "Answer is D for Question 13",
-    14: "Answer is C for Question 14",
-    15: "Answer is C for Question 15",
-    16: "Answer is B for Question 16",
-    17: "Answer is A for Question 17",
-    18: "Answer is B for Question 18",
-    19: "Answer is A for Question 19",
+    1: "Answer is D ",
+    2: "Answer is A ",
+    3: "Answer is A ",
+    4: "Answer is C ",
+    5: "Answer is C ",
+    6: "Answer is D ",
+    7: "Answer is A ",
+    8: "Answer is C ",
+    9: "Answer is D ",
+    10: "Answer is C ",
+    11: "Answer is D ",
+    12: "Answer is A",
+    13: "Answer is D ",
+    14: "Answer is C ",
+    15: "Answer is C ",
+    16: "Answer is B ",
+    17: "Answer is A ",
+    18: "Answer is B ",
+    19: "Answer is A ",
 };
 
 function loadQuestion(questionNumber) {
