--- a/Eapcet_Questions_html/chemistry/question_images/AlcoholsP.html
+++ b/Eapcet_Questions_html/chemistry/question_images/AlcoholsP.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Questions</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Alcohols,Phenols and Ethers</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">     
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <style>
+       .header {
+    background-color: rgb(23, 41, 84);
+    background-position: center;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000; /* Ensure the navbar appears above other content while scrolling down */
+    display: flex;
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
+    padding: 10px 0;
+}
+
+.logo {
+    width: 100px; /* Adjust width as needed */
+    height: 100px; /* Maintains aspect ratio */
+    border-radius: 50%;
+}
+
+/* Responsive Design for Small Screens */
+@media (max-width: 768px) {
+    .header {
+        justify-content: center; /* Ensure the logo stays centered on small devices */
+    }
+}
         .question-card-container {
             display: flex;
             justify-content: center;
@@ -118,7 +151,12 @@
             font-size: 16px;
             border-radius: 5px;
         }
-
+         /* Footer Styles */
+#footer {
+    background-color: rgb(23, 41, 84); /* White background */
+    color: #ffffff; /* Dark blue text color */
+    padding: 10px 0;
+}
         /* Responsive Layout */
         @media (max-width: 768px) {
             .question-card {
@@ -164,8 +202,14 @@
     </style>
 </head>
 <body>
+    <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
+        <nav>
+            <img src="../../../logo.png" alt="" class="logo">    
+        </nav>   
+      </section>
+      <br><br><br><br><br>
     <div class="container mt-4">
-        <h2 class="text-center">Chemistry Questions</h2>
+        <h2 class="text-center">Alcohols,Phenols and Ethers</h2>
         
         <!-- Centering the Question Card -->
         <div id="question-container" class="row justify-content-center">
@@ -185,20 +229,25 @@
 
         <!-- Star Questions List -->
         <div class="mt-4">
-            <h4>Questions with Easy:</h4>
-            <div class="star-question-list" id="double-star-list"></div>
-            <h4>Questions with Medium:</h4>
+            <h4>Level Easy:</h4>
+            <div class="star-question-list" id="double-star-list"></div><br>
+            <h4>Level  Medium:</h4>
             <div class="star-question-list" id="single-star-list"></div>
         </div>
         <br><br><br><br>
     </div>
-
+    <footer id="footer" class="footer">
+        
+        <div class="container text-center">
+            <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
+        </div> 
+    </footer>
     <script>
         const imageFolderPath = "Alcohols,Phenols and Ethers";  // Folder for images
 const totalQuestions = 21;  // Total number of questions
 const imageExtension = ".png";  // Image extension
-const starQuestions = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22];  // Questions with a single star
-const doubleStarQuestions = [3, 5, 7];  // Questions with a double star
+const starQuestions = [1,6,8,12,13,14,18,];  // Questions with a single star
+const doubleStarQuestions = [2, 3, 4,5,7,9,10,11,15,16,17,19,20,21];  // Questions with a double star
 
 let currentQuestion = 1;  // Start with the first question
 const container = document.getElementById("card-content");
@@ -209,25 +258,27 @@ const singleStarList = document.getElementById("single-star-list");
 const doubleStarList = document.getElementById("double-star-list");
 
 const answers = {
-    1: "Answer is A",
-    2: "Answer for Question 2",
-    3: "Answer for Question 3",
-    4: "Answer is C",
-    5: "Answer for Question 5",
-    6: "Answer for Question 6",
-    7: "Answer for Question 7",
-    8: "Answer is B",
-    9: "Answer for Question 9",
-    10: "Answer for Question 10",
-    11: "Answer for Question 11",
-    12: "Answer for Question 12",
-    13: "Answer for Question 13",
-    14: "Answer for Question 14",
-    15: "Answer for Question 15",
-    16: "Answer for Question 16",
-    17: "Answer for Question 17",
-    18: "Answer for Question 18",
-    19: "Answer for Question 19",
+    1: "Answer is C",
+    2: "Answer is B",
+    3: "Answer is B",
+    4: "Answer is D",
+    5: "Answer is C",
+    6: "Answer is A",
+    7: "Answer is D",
+    8: "Answer is A",
+    9: "Answer is C",
+    10: "Answer is B",
+    11: "Answer is C",
+    12: "Answer is D",
+    13: "Answer is A",
+    14: "Answer is A",
+    15: "Answer is B",
+    16: "Answer is A",
+    17: "Answer is C",
+    18: "Answer is D",
+    19: "Answer is D",
+    20: "Answer is D",
+    21: "Answer is B",
 };
 
 function loadQuestion(questionNumber) {
