--- a/Eapcet_Questions_html/chemistry/question_images/ChemicalKineticsP.html
+++ b/Eapcet_Questions_html/chemistry/question_images/ChemicalKineticsP.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mock Test</title>
+  <title>Chemical Kinetics</title>
   <link rel="stylesheet" href="styles.css">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -231,7 +231,7 @@
         <!-- Star Questions List -->
         <div class="mt-4">
             <h4>Level Easy:</h4>
-            <div class="star-question-list" id="double-star-list"></div>
+            <div class="star-question-list" id="double-star-list"></div><br>
             <h4>Level Medium:</h4>
             <div class="star-question-list" id="single-star-list"></div>
         </div>
