--- a/Eapcet_Questions_html/chemistry/Alcohols.html
+++ b/Eapcet_Questions_html/chemistry/Alcohols.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mock Test</title>
+  <title>Alcohols,Phenols and Ethers</title>
+  <link rel="icon" type="image/png" href="../../../logo.png">
   <link rel="stylesheet" href="styles.css">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -121,7 +122,7 @@
   <script>
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "Eapcet";
-    const examTimer = 60;
+    const examTimer = 30;
     const examfolder = "question_images/Alcohols,Phenols and Ethers";
     const numberofquestions = 21;
     const positivemark = 1;
