--- a/Eapcet_Questions_html/chemistry/Aldehydes.html
+++ b/Eapcet_Questions_html/chemistry/Aldehydes.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mock Test</title>
+  <title>Aldehydes,Ketones and Carboxylic Acids</title>
+  <link rel="icon" type="image/png" href="../../../logo.png">
   <link rel="stylesheet" href="styles.css">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
