--- a/Eapcet_Questions_html/chemistry/Chemical_Kinetics.html
+++ b/Eapcet_Questions_html/chemistry/Chemical_Kinetics.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mock Test</title>
+  <link rel="icon" type="image/png" href="../../../logo.png">
   <link rel="stylesheet" href="styles.css">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
