--- a/results.html
+++ b/results.html
@@ -261,7 +261,7 @@
     </table>
 
     <!-- Back Button -->
-    <button class="btn" onclick="window.location.href = 'exams.html';">Back to Exams Page</button>
+    <button class="btn" onclick="window.location.href = '../../Jeemainsexam.html';">Back to Exams Page</button>
   </div>
   <footer id="footer" class="footer">
     <hr>
