--- a/Eapcetexam.html
+++ b/Eapcetexam.html
@@ -504,7 +504,7 @@
                         </div>
                         <div class="card-footer text-center">
                             <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
-                            <div class="d-flex justify-content-center gap-5">
+                            <div class="d-flex justify-content-center gap-3 flex-wrap">
 
                                 <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>
                                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/AtomsP.html'">Practice</button>
@@ -524,7 +524,7 @@
                         </div>
                         <div class="card-footer text-center">
                             <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
-                            <div class="d-flex justify-content-center gap-5">
+                            <div class="d-flex justify-content-center gap-3 flex-wrap">
 
                                 <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>
                                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/CommunicationP.html'">Practice</button>
@@ -544,7 +544,7 @@
                         </div>
                         <div class="card-footer text-center">
                             <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
-                            <div class="d-flex justify-content-center gap-5">
+                            <div class="d-flex justify-content-center gap-3 flex-wrap">
 
                                 <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>
                                 <button class="custom-btn practice" onclick="window.location.href='practice.html'">Practice</button>
@@ -572,7 +572,7 @@
                 </div>
                 <div class="card-footer text-center">
                     <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
-                    <div class="d-flex justify-content-center gap-5">
+                    <div class="d-flex justify-content-center gap-3 flex-wrap">
 
                         <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>
                         <button class="custom-btn practice" onclick="window.location.href='practice.html'">Practice</button>
@@ -593,7 +593,7 @@
                 </div>
                 <div class="card-footer text-center">
                     <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
-                    <div class="d-flex justify-content-center gap-5">
+                    <div class="d-flex justify-content-center gap-3 flex-wrap">
 
                         <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>
                         <button class="custom-btn practice" onclick="window.location.href='practice.html'">Practice</button>
@@ -615,7 +615,7 @@
                 </div>
                 <div class="card-footer text-center">
                     <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
-                    <div class="d-flex justify-content-center gap-5">
+                    <div class="d-flex justify-content-center gap-3 flex-wrap">
 
                         <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>
                         <button class="custom-btn practice" onclick="window.location.href='practice.html'">Practice</button>
@@ -636,7 +636,7 @@
                 </div>
                 <div class="card-footer text-center">
                     <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
-                    <div class="d-flex justify-content-center gap-5">
+                    <div class="d-flex justify-content-center gap-3 flex-wrap">
 
                         <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>
                         <button class="custom-btn practice" onclick="window.location.href='practice.html'">Practice</button>
@@ -656,7 +656,7 @@
                 </div>
                 <div class="card-footer text-center">
                     <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
-                    <div class="d-flex justify-content-center gap-5">
+                    <div class="d-flex justify-content-center gap-3 flex-wrap">
 
                         <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>
                         <button class="custom-btn practice" onclick="window.location.href='practice.html'">Practice</button>
@@ -677,7 +677,7 @@
                 </div>
                 <div class="card-footer text-center">
                     <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
-                    <div class="d-flex justify-content-center gap-5">
+                    <div class="d-flex justify-content-center gap-3 flex-wrap">
 
                         <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>
                         <button class="custom-btn practice" onclick="window.location.href='practice.html'">Practice</button>
@@ -704,7 +704,7 @@
         
         <!-- Chemistry Section -->
 <h2 class="mt-5 mb-4 chemistry-heading">Chemistry</h2>
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-6">
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
     <div class="col mb-3">
         
             <div class="card chemistry-card">
