--- a/Eapcet_Questions_html/chemistry/Easy/Hydrogeneasy.html
+++ b/Eapcet_Questions_html/chemistry/Easy/Hydrogeneasy.html
@@ -30,11 +30,11 @@
       background-color: #ccc;
       cursor: not-allowed;
     }
-    .footer-container {
-        background-color: rgb(23, 41, 84);
-        color: white;
-        text-align: center;
-    }
+    #footer {
+    background-color: rgb(23, 41, 84); /* White background */
+    color: #ffffff; /* Dark blue text color */
+    padding: 10px 0;
+}
   </style>
 </head>
 <body>
@@ -103,10 +103,10 @@
     </div>
   </main>
   <footer id="footer" class="footer">
-    <hr>
-    <div class="footer-container">
-      <h5> Designed by Prathibha Solutions</h5>
-  </div>
+        
+    <div class="container text-center">
+        <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
+    </div> 
 </footer>
   <div id="popup">
     <div id="popupContent">
