--- a/Eapcet_Questions_html/chemistry/Easy/exam.html
+++ b/Eapcet_Questions_html/chemistry/Easy/exam.html
@@ -76,7 +76,11 @@
         }
     }
 
-    
+    #footer {
+    background-color: rgb(23, 41, 84); /* White background */
+    color: #ffffff; /* Dark blue text color */
+    padding: 10px 0;
+}
     </style>
 </head>
 <body>
@@ -177,7 +181,13 @@
     </div>
 </div>
 </form>
-
+<br><br><br><br>
+<footer id="footer" class="footer">
+        
+    <div class="container text-center">
+        <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
+    </div> 
+</footer>
 <div id="popup">
     <div id="popupContent">
       <p id="popupMessage"></p>
