--- a/Eapcetexam.html
+++ b/Eapcetexam.html
@@ -378,7 +378,7 @@
                             <p class="mb-2">Weightage:<br>EAPCET - 4 marks</p>
                             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/Maths/Notes/complexnumbers.html'">Notes</button>
                                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/Maths/question_images/ComplexP.html'">Practice</button>
                                 <!-- <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/Permutationseasy.html'">Test</button>-->
                             </div>
@@ -468,7 +468,7 @@
                     <p class="mb-2">Weightage:<br>EAPCET - 3 marks</p>
                     <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                        <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                        <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/Maths/Notes/differentiation.html'">Notes</button>
                         <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/Maths/question_images/DifferentiationP.html'">Practice</button>
                          <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/Partialfractionseasy.html'">Test</button>-->
                     </div>
@@ -488,7 +488,7 @@
                 <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
                 <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                    <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                    <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/Maths/Notes/functions.html'">Notes</button>
                     <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/Maths/question_images/FunctionsP.html'">Practice</button>
                      <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/Partialfractionseasy.html'">Test</button>-->
                 </div>
@@ -510,7 +510,7 @@
                     <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
                     <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                        <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                        <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/Maths/Notes/hyperbolicfunctions.html'">Notes</button>
                         <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/Maths/question_images/HyperbolicP.html'">Practice</button>
                          <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/3Deasy.html'">Test</button>-->
                     </div>
@@ -550,7 +550,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/Maths/Notes/inversetrignometry.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/Maths/question_images/InverseP.html'">Practice</button>
                  <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/Partialfractionseasy.html'">Test</button>-->
             </div>
@@ -610,7 +610,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 4 marks</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/Maths/Notes/matrices.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/Maths/question_images/MatricesP.html'">Practice</button>
                  <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/Partialfractionseasy.html'">Test</button>-->
             </div>
@@ -730,7 +730,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 3 marks</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/Maths/Notes/propertiesoftriangle.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/Maths/question_images/TrianglesP.html'">Practice</button>
                  <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/Partialfractionseasy.html'">Test</button>-->
             </div>
@@ -850,7 +850,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/Maths/Notes/trignometricequations.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/Maths/question_images/TrigoEquationsP.html'">Practice</button>
                  <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/Partialfractionseasy.html'">Test</button>-->
             </div>
@@ -870,7 +870,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 3 marks</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/Maths/Notes/trignometry.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/Maths/question_images/TrigoFunctionsP.html'">Practice</button>
                  <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/Partialfractionseasy.html'">Test</button>-->
             </div>
@@ -1101,7 +1101,7 @@
                 <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
                 <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                    <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                    <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/gravitation.html'">Notes</button>
                     <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/GravitationP.html'">Practice</button>
                     <!-- <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/.html'">Test</button>-->
                 </div>
@@ -1141,7 +1141,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/kinetictheoryofgases.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/KineticP.html'">Practice</button>
                  <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/.html'">Test</button>-->
             </div>
@@ -1161,7 +1161,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/lawsofmotion.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/LawP.html'">Practice</button>
                 <!-- <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/.html'">Test</button>-->
             </div>
@@ -1221,7 +1221,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/mechanicalpropertiesoffluids'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/FluidsP.html'">Practice</button>
                 <!-- <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/html'">Test</button>-->
             </div>
@@ -1241,7 +1241,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/mechanicalpropertiesofsolids.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/SolidsP.html'">Practice</button>
                  <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/.html'">Test</button>-->
             </div>
@@ -1281,7 +1281,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/oscillations.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/OscillationsP.html'">Practice</button>
                 <!-- <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/.html'">Test</button>-->
             </div>
@@ -1301,7 +1301,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/unitsanddimensions.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/PhysicalP.html'">Practice</button>
                  <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/.html'">Test</button>-->
             </div>
@@ -1401,7 +1401,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/thermalpropertiesofmatter.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/ThermalP.html'">Practice</button>
                 <!-- <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/.html'">Test</button>-->
             </div>
@@ -1421,7 +1421,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/thermodynamics.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/ThermoP.html'">Practice</button>
                  <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/.html'">Test</button>-->
             </div>
@@ -1481,7 +1481,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/workenergyandpower.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/WorkP.html'">Practice</button>
                  <!--<button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/.html'">Test</button>-->
             </div>
@@ -1604,7 +1604,7 @@
                         <p class="mb-2">Weightage:<br>EAPCET - 3 marks</p>
                         <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                            <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                            <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/chemistry/Notes/chemicalbonding.html'">Notes</button>
                             <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/C_BondingP.html'">Practice</button>
                             <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/chemistry/Easy/ChemicalBondingeasy.html'">Test</button>
                         </div>
@@ -1668,7 +1668,7 @@
                         <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
                         <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                           <!-- <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                           <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/chemistry/Notes/chemistryineverydaylilfe.html'">Notes</button>
                             <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/everydayP.html'">Practice</button>
                             <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/chemistry/Easy/Chemistryeverydayeasy.html'">Test</button>
                         </div>
@@ -1769,7 +1769,7 @@
                         <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
                         <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                            <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                            <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/chemistry/Notes/environmentalchemistry.html'">Notes</button>
                             <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/EnvironmentalP.html'">Practice</button>
                             <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/chemistry/Easy/Environmentaleasy.html'">Test</button>
                         </div>
@@ -1908,7 +1908,7 @@
                         <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
                         <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                            <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                            <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/chemistry/Notes/polymers.html'">Notes</button>
                             <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/PolymersP.html'">Practice</button>
                             <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/chemistry/Easy/Polymerseasy.html'">Test</button>
                         </div>
